--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 node_modules
+.env
+.DS_Store
+dist
+coverage
+.vscode
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.idea
+*.iml
+*.log
+*.tsbuildinfo
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.cache
+.next
