--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,57 @@
-node_modules
-.env
-.DS_Store
-new
-dist
-coverage
-.vscode
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.idea
-*.iml
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Logs
+logs/
 *.log
+
+# dotenv environment variables
+.env
+.env.*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# VS Code
+.vscode/
+
+# Build output
+dist/
+build/
+
+# Misc
+*.tgz
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Coverage
+coverage/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# TypeScript
 *.tsbuildinfo
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.cache
-.next
+
+# PM2 logs
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Test output
+/test-output/
