--- a/guild_configs.json
+++ b/guild_configs.json
@@ -1,17 +1,26 @@
 {
-    "1105742461566988328": {
-        "staffRoleId": "1425508511919636623",
-        "ticketPanelTitle": "TICKET",
-        "ticketPanelDescription": "HEY THERE",
-        "ticketCategoryId": "1284000578434895955",
-        "orderCategoryId": "1425514307512438895",
-        "enquiryCategoryId": "1425514412306989258",
-        "supportCategoryId": "1425514364697317578",
-        "ticketPanelChannelId": "142551999999999999",
-        "ticketPanelMessageId": "999999999999999999",
-        "ticketLogChannelId": "142552111111111111",
-        "ticketTranscriptChannelId": "142552222222222222",
-        "ticketCloseDelaySeconds": 5,
-        "ticketButtonLabels": { "close": "Close", "claim": "Claim", "transcript": "Transcript" }
+  "1105742461566988328": {
+    "staffRoleId": "1425508511919636623",
+    "ticketPanelTitle": "TICKET",
+    "ticketPanelDescription": "HEY THERE",
+    "ticketCategoryId": "1284000578434895955",
+    "orderCategoryId": "1425514307512438895",
+    "enquiryCategoryId": "1425514412306989258",
+    "supportCategoryId": "1425514364697317578",
+    "ticketPanelChannelId": "142551999999999999",
+    "ticketPanelMessageId": "999999999999999999",
+    "ticketLogChannelId": "142552111111111111",
+    "ticketTranscriptChannelId": "142552222222222222",
+    "ticketCloseDelaySeconds": 5,
+    "ticketButtonLabels": {
+      "close": "Close",
+      "claim": "Claim",
+      "transcript": "Transcript"
+    },
+    "reactionRoles": {
+      "1426154137728319508": {
+        "💀": "1426153935714123846"
+      }
     }
+  }
 }
