--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ DISCORD_TOKEN=MTQyNTQ3NDQ0NDcxNzA2NDI4NA.GpOZr-.RsGtHTCl5wBEI7AA9sms3pHsLkwXUke-
 CLIENT_ID=1425474444717064284
 GUILD_ID=1105742461566988328
 GEMINI_API_KEY=AIzaSyCHdiR8JIDRfjDxsA4ODHupUfMGfKlkIcA
-CLIENT_ID=1425474444717064284
+
+# License Configuration
+LICENSE_API_BASE_URL=https://shotdevs.live
+LICENSE_KEY=SHOTDEVS-a8311fac-ac89-41fd-b1d8-a1b2bc2deb26
+
 # MongoDB connection string
 MONGO_URI=mongodb+srv://shibinhussainmk_db_user:4XZujvl0OnCKhdN5@musicbot.3sydv1a.mongodb.net/?retryWrites=true&w=majority&appName=musicBOT
