--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "canvacord": "^6.0.3",
     "discord.js": "^14.23.2",
     "dotenv": "^17.2.3",
