--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Discord bot token
-DISCORD_TOKEN=MTQyNTQ3NDQ0NDcxNzA2NDI4NA.GpOZr-.RsGtHTCl5wBEI7AA9sms3pHsLkwXUke-grOPFA
-CLIENT_ID=1425474444717064284
-GUILD_ID=1105742461566988328
+DISCORD_TOKEN=MTI0NDMxMzg5OTExNzgzODQxNw.GdE4KQ.W0h-y6b9WfN5fmb-jr6-oDxiVtRFC5ZejVz0xI
+CLIENT_ID=1244313899117838417
+GUILD_ID=1411891610068844597
 GEMINI_API_KEY=AIzaSyCHdiR8JIDRfjDxsA4ODHupUfMGfKlkIcA
 
 # License Configuration
 LICENSE_API_BASE_URL=https://shotdevs.live
-LICENSE_KEY=SHOTDEVS-a8311fac-ac89-41fd-b1d8-a1b2bc2deb26
+LICENSE_KEY=SHOTDEVS-9bc94ef5-2abe-449c-a319-55f37c7637c8
 
 # MongoDB connection string
 MONGO_URI=mongodb+srv://shibinhussainmk_db_user:4XZujvl0OnCKhdN5@musicbot.3sydv1a.mongodb.net/?retryWrites=true&w=majority&appName=musicBOT
